# visionops_crew

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
assets/: visionops_multi_agent_architecture.mmd
latex/article/: article.tex
latex/slides/: visionops_crew_hackathon_workshop.tex
scripts/: antigravity_a2a_service.py  antigravity_sdk_demo.py  delete_datasets.py  launch_app.py  load_dataset.py
src/visionops_crew/: __init__.py
src/visionops_crew/agents/: __init__.py
src/visionops_crew/agents/cv_research/: agent.py  prompts.py
src/visionops_crew/agents/data_curator/: agent.py  prompts.py  tools.py
src/visionops_crew/agents/ml_engineer/: agent.py  prompts.py
src/visionops_crew/agents/ml_engineer/skills/hardware-profiling/: SKILL.md
src/visionops_crew/agents/ml_engineer/skills/hardware-profiling/scripts/: profiling_tools.py
src/visionops_crew/agents/ml_engineer/skills/jupyter-notebook/: SKILL.md
src/visionops_crew/agents/vision_task_planner/: agent.py  prompts.py
src/visionops_crew/agents/visionops_orchestrator/: agent.py  prompts.py  tools.py
