[project]
name = "visionops-crew"
version = "0.1.0"
description = "Multi-agent computer vision assistant built with Google ADK and Antigravity SDK."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Henry Ruiz" },
]
keywords = [
    "computer-vision",
    "multi-agent",
    "google-adk",
    "antigravity",
    "fiftyone",
    "hugging-face",
]
dependencies = [
    "datasets>=5.0.0",
    "faiss-cpu>=1.14.3",
    "fiftyone>=1.0.0",
    "fiftyone-mcp-server>=0.1.12",
    "google-adk>=2.1.0",
    "google-antigravity>=0.1.5",
    "ipykernel>=7.3.0",
    "jupyter-collaboration==4.0.2",
    "jupyter-mcp-server>=0.15.0",
    "jupyterlab==4.4.1",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "litellm>=1.89.1",
    "pillow>=12.2.0",
    "pycrdt>=0.13.1",
    "python-dotenv>=1.2.2",
    "torch>=2.12.1",
    "transformers>=5.12.1",
]

[project.urls]
Homepage = "https://github.com/haruiz/visionops_crew"
Repository = "https://github.com/haruiz/visionops_crew"
Issues = "https://github.com/haruiz/visionops_crew/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/visionops_crew"]
